fix: tooltip should allways be visible

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -61,3 +61,7 @@ $feedback-success-100: #D9F6E0;
     }
   }
 }
+
+.tooltip {
+  z-index: 100000!important;
+}
